# libplacebo-builds

./: .gitignore  README.md  main.py  meson.build  pyproject.toml  windows-cross.txt
.github/workflows/: build.yml
subprojects/: glslang.wrap  libplacebo.wrap  shaderc.wrap  spirv-cross.wrap  vulkan-headers.wrap  vulkan-loader.wrap
